--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Brand</a>
+    <a class="navbar-brand" href="#">SICCT - SCAMM</a>
 
     <!-- Toggle button -->
     <button
@@ -20,32 +20,29 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link disabled"
-            href="#"
-            tabindex="-1"
-            aria-disabled="true"
-            >Disabled</a
+          <a class="nav-link active" aria-current="page" href="/homeAdmin"
+            >Home</a
           >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Movimientos</a>
         </li>
       </ul>
       <!-- Left links -->
 
       <!-- Search form -->
       <form class="d-flex input-group w-auto">
-        <input
-          type="search"
-          class="form-control"
-          placeholder="Type query"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-primary" type="button">Search</button>
+        <select
+          class="form-control selectpicker"
+          id="participante"
+          data-live-search="true"
+        >
+          <option value="99">Participante</option>
+          <option value="99">Participante</option>
+          <option value="99">Participante</option>
+          <option value="99">Participante</option>
+          <option value="99">Participante</option>
+        </select>
       </form>
     </div>
     <!-- Collapsible wrapper -->
