--- a/src/app/main-container/main-container.component.css
+++ b/src/app/main-container/main-container.component.css
@@ -1,7 +1,7 @@
-.container {
-  display: grid;
-  grid-row: inherit;
+.fila {
+  display: flex;
   overflow-y: scroll;
+  width: 99%;
   margin: 15px;
   padding: 5px;
 }
