--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,22 +1,3 @@
-<div class="container">
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
-  <app-fila></app-fila>
+<div>
+  <app-fila class="fila"></app-fila>
 </div>
