--- a/src/app/fila/fila.component.html
+++ b/src/app/fila/fila.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-  <div class="row align-items-start">
-    <div class="col"><h6>CT: 17ADG0034F</h6></div>
-  </div>
+<div class="container-filas">
+  <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
 </div>
