--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,4 +1,7 @@
 <div class="main-container">
   <app-fila class="fila"></app-fila>
-  <div class="map-container"></div>
+  <div class="">
+    <app-mapa></app-mapa>
+  </div>
+  
 </div>
