Funcion a boton agregada

--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,7 +1,6 @@
 <div class="main-container">
   <app-fila class="fila"></app-fila>
   <div class="">
-    <app-mapa></app-mapa>
+    <!-- <app-mapa></app-mapa> -->
   </div>
-  
 </div>
