--- a/src/app/fila/fila.component.html
+++ b/src/app/fila/fila.component.html
@@ -1,3 +1,39 @@
 <div class="container-filas">
-  <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+  <!-- <table datatable [dtOptions]="dtOptions" class="row-border hover"></table> -->
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Categoria</th>
+        <th>Asignatura</th>
+        <th>CCT</th>
+        <th>Nombre Escuela</th>
+        <th>Municipio</th>
+        <th>Horas</th>
+        <th>Total Horas</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let item of tableArray">
+        <ng-container *ngFor="let plaza of item.plazas; let i = index">
+          <tr>
+            <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
+              {{ item.plazas[0].categoria }}
+            </td>
+            <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
+              {{ item.plazas[0].asignatura }}
+            </td>
+            <td>{{ plaza.CCT }}</td>
+            <td>{{ plaza.nombreCT }}</td>
+            <td>{{ plaza.municipio }}</td>
+            <td>{{ plaza.horas }}</td>
+            <td>{{ item.horasTotales }}</td>
+            <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
+              <button class="btn btn-primary">Registrar</button>
+            </td>
+          </tr>
+        </ng-container>
+      </ng-container>
+    </tbody>
+  </table>
 </div>
