nuevo diseno tabla

--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -2,5 +2,16 @@
   <app-fila class="fila"></app-fila>
   <div class="">
     <!-- <app-mapa></app-mapa> -->
+    <h6>¿Está seguro de registrar el siguiente movimiento de cambio de CT?</h6>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Plazas de Inscrito</th>
+          <th>Plazas de Bolsa</th>
+          <th>Cantidad CT de Inscrito</th>
+          <th>Cantidad CT de Bolsa</th>
+        </tr>
+      </thead>
+    </table>
   </div>
 </div>
