--- a/src/app/fila/fila.component.html
+++ b/src/app/fila/fila.component.html
@@ -29,7 +29,12 @@
             <td>{{ plaza.horas }}</td>
             <td>{{ item.horasTotales }}</td>
             <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
-              <button class="btn btn-primary">Registrar</button>
+              <button
+                class="btn btn-primary"
+                (click)="registrarMovimiento(item)"
+              >
+                Registrar
+              </button>
             </td>
           </tr>
         </ng-container>
