navbar con datos agregada

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,16 +5,6 @@
     <!-- Navbar brand -->
     <a class="navbar-brand" href="#">SICCT - SCAMM</a>
 
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
-
     <!-- Collapsible wrapper -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Left links -->
@@ -29,19 +19,43 @@
         </li>
       </ul>
       <!-- Left links -->
-
+      <div
+        class="container-md"
+        style="text-align: center; margin: 0; padding: 0"
+      >
+        <h4>ABIGAIL REBOLLEDO OCAMPO</h4>
+        <p><b>CURP: </b>REOA931128MMSBCB08 <b>RFC: </b>REOA931128E53</p>
+        <div class="row">
+          <div class="col" style="display: flex; justify-content: center">
+            <p><b>Plazas:</b></p>
+            <ul style="display: table; margin: 0">
+              <li>071712E028100105123</li>
+              <li>071712E028100105123</li>
+              <li>071712E028100105123</li>
+            </ul>
+          </div>
+          <div class="col" style="display: flex; justify-content: center">
+            <p><b>CT</b></p>
+            <ul style="display: table; margin: 0">
+              <li>17DPR1070B</li>
+              <li>17DPR0001A</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <!-- Search form -->
-      <form class="d-flex input-group w-auto">
+      <form class="d-flex input-group" style="width: 500px; right: 10px">
         <select
           class="form-control selectpicker"
           id="participante"
           data-live-search="true"
         >
-          <option value="99">Participante</option>
-          <option value="99">Participante</option>
-          <option value="99">Participante</option>
-          <option value="99">Participante</option>
-          <option value="99">Participante</option>
+          <option value="">CURP de Inscrito</option>
+          <option value="99">SACA971002MMSVRB00</option>
+          <option value="99">NAMA581013HMSVRB02</option>
+          <option value="99">RAAA880717MMSMRB01</option>
+          <option value="99">BAOA910325MMSRSD06</option>
+          <option value="99">HERA920723HMSRMD19</option>
         </select>
       </form>
     </div>
