--- a/src/app/fila/fila.component.html
+++ b/src/app/fila/fila.component.html
@@ -27,7 +27,9 @@
             <td>{{ plaza.nombreCT }}</td>
             <td>{{ plaza.municipio }}</td>
             <td>{{ plaza.horas }}</td>
-            <td>{{ item.horasTotales }}</td>
+            <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
+              {{ item.horasTotales }}
+            </td>
             <td *ngIf="i === 0" [attr.rowspan]="item.plazas.length">
               <button
                 class="btn btn-primary"
