--- a/src/app/fila/fila.component.css
+++ b/src/app/fila/fila.component.css
@@ -11,6 +11,11 @@ td {
   vertical-align: middle;
 }
 
+th {
+  text-align: center;
+  vertical-align: middle;
+}
+
 .swal-modal-size {
   width: 950px !important;
   background-color: red;
