--- a/src/app/components/main-container/main-container.component.html
+++ b/src/app/components/main-container/main-container.component.html
@@ -1,5 +1,6 @@
 <div class="main-container">
-  <app-fila class="fila"></app-fila>
+  <app-fila [listaBolsaCompatible]="listaBolsaCompatible" class="fila">
+  </app-fila>
   <div class="">
     <!-- <app-mapa></app-mapa> -->
   </div>
