--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Movimientos</a>
+          <a class="nav-link" aria-current="page" routerLink="/lista-conmovimiento">Movimientos</a>
         </li>
       </ul>
       <!-- Left links -->
