--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,16 @@
 <!-- Navbar -->
+<button
+  type="button"
+  class="btn btn-danger"
+  (click)="cerrar()"
+>
+  Cerrar Sesión
+</button> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   
   <!-- Container wrapper -->
   <div class="container-fluid">
+    
     <!-- Navbar brand -->
     <a class="navbar-brand" href="#">SICCT - SCAMM</a>
 
@@ -17,6 +26,7 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="/lista-conmovimiento">Movimientos</a>
         </li>
+        
       </ul>
       <!-- Left links -->
       <div
