punto de comienzo

--- a/src/app/lista-bolsa/lista-bolsa.component.html
+++ b/src/app/lista-bolsa/lista-bolsa.component.html
@@ -1,4 +1,4 @@
-<div class="lista-bolsa">
+<div class="lista-bolsa" id="lista-bolsa" name="lista-bolsa">
   <div>
     <select class="form-select" name="select-nivel" id="select-nivel">
       <option value="1">EDUCACIÓN PREESCOLAR</option>
