Movimiento guardado con exito

--- a/src/app/components/fila/fila.component.html
+++ b/src/app/components/fila/fila.component.html
@@ -32,7 +32,7 @@
             <td *ngIf="i === 0" [attr.rowspan]="bolsa.plazas.length">
               <button
                 class="btn btn-primary"
-                (click)="registrarMovimiento(bolsa)"
+                (click)="porRegistrarMovimiento(bolsa)"
               >
                 Registrar
               </button>
