--- a/src/app/components/listamovimientos/listamovimientos.component.html
+++ b/src/app/components/listamovimientos/listamovimientos.component.html
@@ -20,6 +20,9 @@
             <hr />
           </div>
            <div #tableContainer id="tableContainer" class="tableContainer"> 
+            <div class="btn-group d-block text-center">
+              
+            </div>
             <table datatable [dtOptions]="dtOptions"  >
               <!-- <thead>
                 <tr>
