--- a/src/app/lista-bolsa/lista-bolsa.component.css
+++ b/src/app/lista-bolsa/lista-bolsa.component.css
@@ -1,3 +1,19 @@
-.tableContainer{
-  overflow-y: auto;
+.tableContainer {
+  /* overflow-y: auto; */
+}
+
+.lista-bolsa {
+  margin: 15px;
+  padding: 10px;
+  background-color: white;
+}
+
+td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+th {
+  text-align: center;
+  vertical-align: middle;
 }
